# etap

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  examples.sh  msp430  prob-sym-exec.sh  start.sh
Plots/: classify.intermittent.1mF.1MHz.Variant1.R  classify.intermittent.1mF.1MHz.Variant2.R  classify.intermittent.1mF.1MHz.Variant3.R  classify.intermittent.2mF.1MHz.Variant1.R  classify.intermittent.2mF.1MHz.Variant2.R  classify.intermittent.2mF.1MHz.Variant3.R  classify.intermittent.5mF.1MHz.Variant1.R  classify.intermittent.5mF.1MHz.Variant2.R  classify.intermittent.5mF.1MHz.Variant3.R  classify.sym.R  harvesting_time_cont.R  harvesting_time_scatter.R  hrsvt.R  meta.R
R/: blocksplitting-threshold-invetigation.R  cfg.R  distr.R  faster.demo.R  graph.R  llvm2R-E-globalalloc.R  llvm2R-E.R  llvm2R-functions.R  llvm2R-nv-checkpoint.R  llvm2R-tests.R  llvm2R.R  meta.R  meta.cpp  model.R  msp430.R  optimization.R  pfg.R
R/llvm-meta-packaging/: ReadMe.md
R/memory-packaging/: benchmark.R  memory.R
experiments/: .Rhistory  main.c  measurement-list.md
experiments/addressing-mode-based-model/: .cproject  addressing-mode-measurement.R  evaluation-energy-report.R  main.c  report.html  report.rmd
experiments/applications/: applications.md
experiments/balanced_path_analysis/: balanced-path-measurement.R
experiments/bbm-experiments/: .cproject  README.md  main.c  sampling_distribution.html  sampling_distribution.rmd
experiments/block-based-model/: .cproject  .gitignore  CheckPoint.c  block-measurement.R  block-model.rmd  checkpoint-experiment.c  continuous-model-1.R  continuous-model-3.R  main.c  parser.R  test1.s  test2.s
experiments/checkpoint/: .cproject  main.c
experiments/checkpoint-aes/: .cproject  .gitignore  aes.h  main.c
experiments/checkpoint-old/: .cproject  msp430fr5994.ld
experiments/checkpoint-prof/: .cproject  README.md  checkpoint-measurement.R  main.c
experiments/checkpoint-ref/: main.c
experiments/checkpoint-restore/: .ccsproject  main.c  restore-measurement.R
experiments/checkpoint-sha/: input.h  main.c  sha.c
experiments/energy-harvester-demo/: CheckPoint.c  main.c
experiments/energy-per-cycle-measurement/: .ccsproject  .cproject  aes.c  main.c
experiments/led-prof/: .ccsproject  .cproject  README.md  main.c
experiments/loop-overhead/: .ccsproject  .cproject  loop-overhead-measurement.R
experiments/models/: incoming-energy.md
experiments/mspabi-prof/: .cproject  main.c  mspabi-measurement.R
experiments/profiling-eren/: checkpoint_1000sample.csv  dijkstra_normal_execution.csv  dotProduct_normal_execution.csv  (+7 more)
input/: CMakeLists.txt  add.c  andornot.c  arithmetic-example.c  array.c  array1.c  array2.c  array3.c  array4.c  array5.c  array_struct.c  balanced_path.c  bit-arithmetic-example.c  caller1.c  checkpoint.h  classify.c  conditional-for-1.c  conditional.c  conditional1.c  conditional2.c  conditional3.c  conditional4.c  conditional5.c  continuous-generating-function-model.R  continuous-model-old.R  continuous-model.R  continuous-no-mix-model.R  deterministic-model-old.R  discrete-model-old.R  discrete-model.R  factorial.c  foo.c  foo.d.c  get_sign.c  harvesting-1000uF.conf.R  local1.c  local2.c  local3.c  local4.c  local5.c  (+42 more)
reporter/: Reporter.cpp
src/: BlockSplitterPass.cpp  CostModelPass.cpp  NEAnalysisPass.cpp
(+872 files in other folders)
